<resources>
    <string name="app_name">PartTimeJobApplication</string>
    <string name="title">出発前予定数</string>
    <string name="title2">変更後合計入力画面</string>
    <string name="daily">"デイリー"</string>
    <string name="daily2">デイリー副</string>
    <string name="daily_plus">デイリープラス</string>
    <string name="daily_plus2">デイリープラス副</string>
    <string name="sd_set">SDセット</string>
    <string name="sd2">SD副</string>
    <string name="karubi">カルビ</string>
    <string name="karubi2">カルビ副</string>
    <string name="gohanBig">ご飯大盛数</string>
    <string name="gohanSmall">ご飯小盛数</string>
    <string name="prepareSave_btn">計算</string>
    <string name="prepareClear_btn">クリア</string>
    <string name="prepareNext_btn">最終入力画面へ</string>
    <string name="prepare2CalcConfirm_btn">計算・確認</string>
    <string name="todo_btn">TODO画面へ</string>
    <string name="todo_title">ToDo画面</string>
    <string name="departure_btn">出発</string>
    <string name="back_btn">戻る</string>
    <string name="comfirm">確認</string>
    <string name="saveAccount">保存</string>
    <string name="finishAccount">終了</string>
</resources>
